--- a/invite-anyone/invite-anyone.css
+++ b/invite-anyone/invite-anyone.css
@@ -42,6 +42,54 @@ body.group-create div#content .main-column {
 	width: 225px;
 }
 
+#invite-anyone-email-fields {
+	margin: 15px 30px 0 30px;
+	list-style-type: lower-alpha;
+}
+
+#invite-anyone-steps {
+	margin: 0 20px;
+	list-style-type: decimal;
+}
+
+#invite-anyone-steps li {
+	margin: 20px;
+}
+
+.invite-anyone-email-fields {
+	width: 200px;
+}
+
+#invite-anyone-group-list {
+	margin: 0;
+	padding: 0;
+	clear: both;
+}
+
+#invite-anyone-group-list li {
+	width: 200px;
+	margin: 5px 10px 10px 10px;
+	float: left;
+}
+
+#invite-anyone-group-list li img {
+	margin-right: 5px;
+}
+
+#invite-anyone-group-list li input {
+	float: left;
+	margin: 13px;
+}
+
+.invite-new-members .submit {
+	clear: both;
+	padding: 20px;
+}
+
+.invite-anyone-sent-invites {
+	text-align: left;
+}
+
 .ac_results {
 	padding: 0px;
 	overflow: hidden;
