Adding clear links for sent invitations
git-svn-id: http://plugins.svn.wordpress.org/invite-anyone/trunk@231253 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/by-email/by-email-css.css
+++ b/by-email/by-email-css.css
@@ -61,5 +61,15 @@
 	text-align: left;
 }
 
-	
+.invite-anyone-sent-invites tr td:first-child {
+	width: 30px;
+	text-align: center;
+}
+
+.invite-anyone-sent-invites tr td:first-child a {
+	text-decoration: none;
+}	
+
+p#invite-anyone-clear-links {
+	padding-top: 15px;
 }
