Adding customizable footer and opt-out/accept wildcards for admins
git-svn-id: http://plugins.svn.wordpress.org/invite-anyone/trunk@232191 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/widgets/widgets-css.css
+++ b/widgets/widgets-css.css
@@ -6,7 +6,7 @@ form.standard-form .invite-anyone-widget-email-fields input[type="text"] {
 }
 
 p#invite-anyone-widget-submit {
-	text-align: right;
+	text-align: left;
 	margin-top: 10px;
 }
 
