CSS fixes on invite by email screen
git-svn-id: http://plugins.svn.wordpress.org/invite-anyone/trunk@240188 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/by-email/by-email-css.css
+++ b/by-email/by-email-css.css
@@ -43,10 +43,13 @@
 	margin: 5px 10px 10px 10px;
 	float: left;
 	min-height: 60px;
+	line-height: 11pt;
+	font-size: 8pt;
 }
 
 #invite-anyone-group-list li img {
 	margin-right: 5px;
+	float: left;
 }
 
 #invite-anyone-group-list li input {
@@ -74,4 +77,8 @@
 
 p#invite-anyone-clear-links {
 	padding-top: 15px;
+}
+
+.invite-anyone-group-name {
+	float: left;
 }
