--- a/widgets/widgets-css.css
+++ b/widgets/widgets-css.css
@@ -1,4 +1,4 @@
-form.standard-form .invite-anyone-widget-email-fields input[type="text"] {
+form.standard-form .invite-anyone-email-addresses {
 	width: 95%;
 	padding: 4px;
 	font-size: 9pt;
