Moves IA settings into tabs
git-svn-id: http://plugins.svn.wordpress.org/invite-anyone/trunk@388303 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/admin/admin-css.css
+++ b/admin/admin-css.css
@@ -1,19 +1,8 @@
-.ia-tabs {
-	background: #d7d7d7;
-	padding-top: 10px;
+.ia-tabs li {
+	display: inline-block;
+	padding: 10px 20px;
+	background: #fff;
 }
-	.ia-tabs li {
-		display: inline-block;
-		padding: 4px 10px;
-		background: #f9f9f9;
-		margin: 0 7px;
-		border: 1px solid #f9f9f9;
-		border-bottom: none;
-		border-radius: 5px 5px 0 0;
-	}
-	.ia-tabs li.current {
-		border-color: #666;
-	}
 
 .invite-anyone-admin-limited ul {
 	padding-left: 30px;
