--- a/admin/admin-css.css
+++ b/admin/admin-css.css
@@ -1,8 +1,18 @@
-.ia-tabs li {
-	display: inline-block;
-	padding: 10px 20px;
-	background: #fff;
+.ia-tabs {
+	background: #d7d7d7;
+	padding-top: 10px;
 }
+	.ia-tabs li {
+		display: inline-block;
+		padding: 6px 12px;
+		background: #f9f9f9;
+		margin: 0 10px;
+		border: 1px solid #f9f9f9;
+		border-bottom: none;
+	}
+	.ia-tabs li.current {
+		border-color: #666;
+	}
 
 .invite-anyone-admin-limited ul {
 	padding-left: 30px;
@@ -40,47 +50,3 @@ div.cs p {
 	margin-top: 30px;
 	clear: both;
 }
-
-.ia-admin-pagination {
-	position: relative;
-	height: 30px;
-	margin-top: 10px;
-	color: #555;
-	font-size: 11px;
-}
-	.ia-admin-pagination .currently-viewing {
-		position: absolute;
-		top: 0;
-		left: 0;
-		font-style: italic;
-	}
-	.ia-admin-pagination .pag-links {
-		position: absolute;
-		top: 0;
-		right: 0;
-	}
-	.ia-admin-pagination .page-numbers {
-		margin-left: 8px;
-	}
-
-
-.widefat .ia-inviter {
-	width: 200px;
-}
-.widefat .ia-cloudsponge {
-	width: 100px;
-}
-
-.ia-stats th, .ia-stats td {
-	width: 50px;
-	vertical-align: middle;
-}
-	.ia-stats .in-the-last {
-		width: 80px;
-	}
-	.ia-stats .top-inviter {
-		width: 90px;
-	}
-	.ia-stats .description {
-		font-size: 9px;
-	}
