--- a/group-invites/group-invites-css.css
+++ b/group-invites/group-invites-css.css
@@ -90,89 +90,8 @@ body.group-create div#content .main-column {
 	text-align: left;
 }
 
-.ac_results {
-	padding: 0px;
-	overflow: hidden;
-	z-index: 99999;
-	background: #fff;
-	border: 1px solid #ccc;
-	-moz-border-radius-bottomleft: 3px;
-	-khtml-border-bottom-left-radius: 3px;
-	-webkit-border-bottom-left-radius: 3px;
-	border-bottom-left-radius: 3px;
-	-moz-border-radius-bottomright: 3px;
-	-khtml-border-bottom-right-radius: 3px;
-	-webkit-border-bottom-right-radius: 3px;
-	border-bottom-right-radius: 3px;
-}
-	.ac_results ul {
-		width: 100%;
-		list-style-position: outside;
-		list-style: none;
-		padding: 0;
-		margin: 0;
-	}
-	
-	.ac_results li {
-		margin: 0px;
-		padding: 5px 10px;
-		cursor: pointer;
-		display: block;
-		font-size: 1em;
-		line-height: 16px;
-		overflow: hidden;
-	}
-
-	
-.ac_loading {
-	background : url('../../images/ajax-loader.gif') right center no-repeat;
-}
-
-.ac_odd {
-	background-color: #f0f0f0;
-}
-
-.ac_over {
-	background-color: #888;
-	color: #fff;
-}
-
-ul.acfb-holder { 
-	margin  : 0; 
-	height  : auto !important; 
-	height  : 1%; 
-	overflow: hidden; 
-	padding: 0;
-	list-style: none;
-	width: 240px;
-}
-	ul.acfb-holder li { 
-		float   : left; 
-		margin  : 0 5px 4px 0; 
-		list-style-type: none; 
-	}
-	
-	ul.acfb-holder li.friend-tab { 
-		border-radius         : 3px; 
-		-moz-border-radius    : 3px; 
-		-webkit-border-radius : 3px; 
-		border     : 1px solid #ffe7c7; 
-		padding    : 2px 7px 2px; 
-		background : #FFF9DF; 
-		font-size: 1em;
-	}
-		li.friend-tab img.avatar {
-			border-width: 2px !important;
-			vertical-align: middle;
-		}
-		
-		li.friend-tab span.p {
-			padding-left: 5px;
-			font-size: 0.8em;
-			cursor: pointer;
-		}
-
-input#send-to-input { width: 225px !important; }
-
-	
-}
+.autocomplete-w1 { background:url(img/shadow.png) no-repeat bottom right; position:absolute; top:0px; left:0px; margin:8px 0 0 6px; /* IE6 fix: */ _background:none; _margin:0; }
+.autocomplete { border:1px solid #999; background:#FFF; cursor:default; text-align:left; max-height:350px; overflow:auto; margin:-6px 6px 6px -6px; /* IE6 specific: */ _height:350px;  _margin:0; _overflow-x:hidden; }
+.autocomplete .selected { background:#F0F0F0; }
+.autocomplete div { padding:2px 5px; white-space:nowrap; }
+.autocomplete strong { font-weight:normal; color:#3399FF; }
