Adds one-column layout for small screens.
Use two-column layout for wide screens, one-column for narrow screens.
Breakpoint is kind of arbitrary.

--- a/by-email/by-email-css.css
+++ b/by-email/by-email-css.css
@@ -66,11 +66,12 @@ label span.disabled-subject {
 }
 
 #invite-anyone-group-list {
+	list-style-type: none;
 	margin: 0;
 	padding: 0;
 	clear: both;
-  overflow:hidden;
-  width:100%;
+	overflow:hidden;
+	width:100%;
 }
 
 #invite-anyone-group-list li {
