--- a/group-invites/group-invites-css.css
+++ b/group-invites/group-invites-css.css
@@ -107,6 +107,14 @@ input.autocomplete-loading {
 	background: transparent url(../images/loading.gif) no-repeat 98% center;
 }
 
+input.submit-disabled {
+	opacity: .5;
+}
+
+input.submit-disabled:hover {
+	background: inherit;
+}
+
 /* one-column layout for narrow screens */
 @media screen and (max-width:55em) { 
 
