--- a/by-email/by-email-css.css
+++ b/by-email/by-email-css.css
@@ -50,6 +50,7 @@
 
 #invite-anyone-custom-subject {
 	width: 400px;
+	max-width: 100%;
 	height: 30px;
 }
 
@@ -61,6 +62,7 @@ label span.disabled-subject {
 
 #invite-anyone-custom-message {
 	width: 400px;
+	max-width: 100%;
 	height: 130px;
 	margin-bottom: 10px;
 }
@@ -273,6 +275,7 @@ div.invite-anyone-error p {
 
 textarea.invite-anyone-email-addresses {
 	width: 400px;
+	max-width: 100%;
 	height: 130px;
 }
 
@@ -312,6 +315,10 @@ textarea.invite-anyone-email-addresses {
 }
 
 @media screen and (max-width:680px) {
+	#invite-anyone-steps {
+		margin-left: 0;
+	}
+
 	table.invite-anyone-sent-invites .col-date-invited {
 		display: none;
 	}
