Custom signup URL for IA and red warning if CS key is not saved

--- a/admin/admin-css.css
+++ b/admin/admin-css.css
@@ -47,6 +47,10 @@ div.cs p {
 	float: left;
 }
 
+.cs-warning {
+	color: red;
+}
+
 #invite-anyone-settings-submit {
 	margin-top: 30px;
 	clear: both;
