--- a/admin/admin-css.css
+++ b/admin/admin-css.css
@@ -16,9 +16,15 @@ div.cs-settings label {
 	float: left;
 }
 
-div.cs-settings input {
+div.cs-settings input[type=text] {
 	padding: 5px auto;
 	width: 200px;
+}
+
+div.cs-settings ul {
+	columns: 2;
+	-webkit-columns: 2;
+	-moz-columns: 2;
 }
 
 div.cs p {
