--- a/admin/admin-css.css
+++ b/admin/admin-css.css
@@ -16,6 +16,11 @@ div.cs-settings label {
 	float: left;
 }
 
+div.cs-settings .cs-source-list-checkboxes label {
+	display: inline;
+	float: none;
+}
+
 div.cs-settings input[type=text] {
 	padding: 5px auto;
 	width: 200px;
