Styling improvements for 'clear links' on sent invitations page.
Fixes #168.

--- a/by-email/by-email-css.css
+++ b/by-email/by-email-css.css
@@ -248,6 +248,7 @@ ul#invite-anyone-clear-links {
 
 ul#invite-anyone-clear-links li {
   float:left;
+  list-style-type: none;
 }
 
 ul#invite-anyone-clear-links li a {
